# ComputerVision-Glossary

./: README.md  pyproject.toml
classical_CV_techniques/: List of Filters.docx  feature_extraction.ipynb  object_detection.ipynb
