[project]
name = "computervision-glossary"
version = "0.1.0"
description = "Computer vision techniques/models and short scripts implementing them."
authors = [
    {name = "Anandadide",email = "amandahsr9@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=6.1.0,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "matplotlib (>=3.9.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
